Fixed the main view height issue on mobile

--- a/main.css
+++ b/main.css
@@ -81,8 +81,6 @@ body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -164,6 +162,10 @@ body {
  */
 
 @media (min-width: 768px) {
+  .site-wrapper {
+    height: 100%;
+    min-height: 100%;
+  }
   .masthead-brand {
     float: left;
   }
